Fix UI Shift and scroll bar in move thread modal

--- a/components/forward_post_modal/forward_post_modal.scss
+++ b/components/forward_post_modal/forward_post_modal.scss
@@ -1,4 +1,9 @@
 .forward-post {
+    &.move-thread {
+        .modal-body {
+            overflow: visible;
+        }
+    }
     &.modal-dialog {
         margin-top: 64px;
     }
